# ranepa_class_project1

./: README.md  main.py  pyproject.toml  table.py  table1.csv
