[tool.poetry]
name = "repl-nix-ranepaclassproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ranepaclassproject1"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
